RESOLVED FIXED241453
[Assertion] m_lastPresentationTime in WebMParser::VideoTrackData::flushPendingSamples()
https://bugs.webkit.org/show_bug.cgi?id=241453
Summary [Assertion] m_lastPresentationTime in WebMParser::VideoTrackData::flushPendin...
Jean-Yves Avenard [:jya]
Reported 2022-06-09 00:25:09 PDT
STR: 1- Open https://www.youtube.com/watch?v=gLcpjY3Gm2E 2- Select 8K stream 3- Seek around 4m mark ``` error: invalid value path 'target.prefer-gdb-objc-realized-classes' (lldb) bt * thread #77, queue = 'SourceBufferPrivateAVFObjC data parser queue', stop reason = EXC_BAD_ACCESS (code=1, address=0xbbadbeef) frame #0: 0x000000012dddef28 JavaScriptCore`::WTFCrash() at Assertions.cpp:322:35 frame #1: 0x000000014bb23ef4 WebCore`WTFCrashWithInfo((null)=1160, (null)="platform/graphics/cocoa/SourceBufferParserWebM.cpp", (null)="void WebCore::WebMParser::VideoTrackData::flushPendingSamples()", (null)=2651) at Assertions.h:748:5 * frame #2: 0x000000014feccfd4 WebCore`WebCore::WebMParser::VideoTrackData::flushPendingSamples(this=0x00000001390da070) at SourceBufferParserWebM.cpp:1160:5 frame #3: 0x000000014fec8640 WebCore`WebCore::WebMParser::flushPendingVideoSamples(this=0x0000000139028538) at SourceBufferParserWebM.cpp:1056:63 frame #4: 0x000000014fec826c WebCore`WebCore::WebMParser::parse(this=0x0000000139028538, segment=0x000000016dff67c8) at SourceBufferParserWebM.cpp:581:13 frame #5: 0x000000014fed0214 WebCore`WebCore::SourceBufferParserWebM::appendData(this=0x00000001390284e0, segment=0x000000016dff67c8, completionHandler=0x000000016dff67b8, appendFlags=None)>&&, WebCore::SourceBufferParser::AppendFlags) at SourceBufferParserWebM.cpp:1475:28 frame #6: 0x000000014babb394 WebCore`WebCore::SourceBufferPrivateAVFObjC::append(this=0x00000001395d10e8)::$_16::operator()() at SourceBufferPrivateAVFObjC.mm:696:17 frame #7: 0x000000014babb198 WebCore`WTF::Detail::CallableWrapper<WebCore::SourceBufferPrivateAVFObjC::append(WTF::Ref<WebCore::SharedBuffer, WTF::RawPtrTraits<WebCore::SharedBuffer> >&&)::$_16, void>::call(this=0x00000001395d10e0) at Function.h:53:39 frame #8: 0x000000012de073e4 JavaScriptCore`WTF::Function<void ()>::operator(this=0x0000000139635378)() const at Function.h:82:35 frame #9: 0x000000012df38d58 JavaScriptCore`WTF::(anonymous namespace)::DispatchWorkItem::operator(this=0x0000000139635370)() at WorkQueueCocoa.cpp:40:25 frame #10: 0x000000012df375c8 JavaScriptCore`void WTF::dispatchWorkItem<WTF::(anonymous namespace)::DispatchWorkItem>(dispatchContext=0x0000000139635370) at WorkQueueCocoa.cpp:48:5 frame #11: 0x0000000102acea48 libdispatch.dylib`_dispatch_client_callout + 20 frame #12: 0x0000000102ad7de8 libdispatch.dylib`_dispatch_lane_serial_drain + 984 frame #13: 0x0000000102ad8e40 libdispatch.dylib`_dispatch_lane_invoke + 432 frame #14: 0x0000000102ae8998 libdispatch.dylib`_dispatch_workloop_worker_thread + 1064 frame #15: 0x00000001026dbf58 libsystem_pthread.dylib`_pthread_wqthread + 288 (lldb) ``` Regression from bug 236754
Attachments
Radar WebKit Bug Importer
Comment 1 2022-06-09 00:25:29 PDT
Jean-Yves Avenard [:jya]
Comment 2 2022-06-11 04:30:43 PDT
EWS
Comment 3 2022-06-12 20:23:07 PDT
Committed r295480 (251485@main): <https://commits.webkit.org/251485@main> Reviewed commits have been landed. Closing PR #1458 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.