Handle case where only a single video frame was appended. https://bugs.webkit.org/show_bug.cgi?id=241453

Reviewed by Jer Noble.

Under some circumstances, only a single frame will be appended.
When the queue of pending samples gets flushed we can't rely on the last sample's time
nor the last duration.

* Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(WebCore::WebMParser::VideoTrackData::flushPendingSamples):

Canonical link: https://commits.webkit.org/251485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295480 268f45cc-cd09-0410-ab3c-d52691b4dbfc